Integration test completed